--- a/layouts/_partials/site-header.html
+++ b/layouts/_partials/site-header.html
@@ -4,7 +4,7 @@
   {{ $trimmed := strings.TrimPrefix $featured_image "/" }}
   {{ $imgRes := resources.Get $trimmed }}
   {{ $featured_image_class := site.Params.featured_image_class | compare.Default "cover bg-center" }}
-  {{ if $imgRes }}
+  {{ if and $imgRes (eq $imgRes.MediaType.Type "image") }}
     {{/* Generate three sizes and a srcset */}}
     {{ $large := $imgRes.Fit "1920x800" }}
     {{ $medium := $imgRes.Fit "1200x600" }}
