--- a/layouts/_partials/site-header.html
+++ b/layouts/_partials/site-header.html
@@ -14,7 +14,7 @@
     <header class="{{ $featured_image_class }}" style="min-height:50vh; position:relative;">
       <img src="{{ $large.RelPermalink }}" srcset="{{ $srcset }}" sizes="(min-width:1200px) 1920px, 100vw" alt="" style="position:absolute;inset:0;width:100%;height:100%;object-fit:cover;object-position:center;z-index:0;" />
       {{ $cover_dimming_class := site.Params.cover_dimming_class | compare.Default "bg-black-60" }}
-      <div style="position:absolute;inset:0;z-index:1;" class="{{ $cover_dimming_class }}"></div>
+      <div style="position:absolute;inset:0;z-index:1;pointer-events:none;background:rgba(0,0,0,.6);" class="{{ $cover_dimming_class }} hero-overlay"></div>
       <div style="position:relative;z-index:2;">
         {{ partials.Include "site-navigation.html" .}}
         <div class="tc-l pv4 pv6-l ph3 ph4-ns">
@@ -64,7 +64,7 @@
       <header class="{{ $featured_image_class }}" style="min-height:50vh; position:relative;">
         <img src="{{ index (split (index (split $srcset ", ") 0) " ") 0 }}" srcset="{{ $srcset }}" sizes="(min-width:1200px) 1920px, 100vw" alt="" style="position:absolute;inset:0;width:100%;height:100%;object-fit:cover;object-position:center;z-index:0;" />
         {{ $cover_dimming_class := site.Params.cover_dimming_class | compare.Default "bg-black-60" }}
-        <div style="position:absolute;inset:0;z-index:1;" class="{{ $cover_dimming_class }}"></div>
+        <div style="position:absolute;inset:0;z-index:1;pointer-events:none;background:rgba(0,0,0,.6);" class="{{ $cover_dimming_class }} hero-overlay"></div>
         <div style="position:relative;z-index:2;">
           {{ partials.Include "site-navigation.html" .}}
           <div class="tc-l pv4 pv6-l ph3 ph4-ns">
@@ -82,7 +82,7 @@
     {{ else }}
       <header class="{{ $featured_image_class }}" style="background-image: url('{{ $featured_image }}'); min-height:50vh;">
         {{ $cover_dimming_class := site.Params.cover_dimming_class | compare.Default "bg-black-60" }}
-        <div style="position:absolute;inset:0;z-index:1;" class="{{ $cover_dimming_class }}"></div>
+        <div style="position:absolute;inset:0;z-index:1;pointer-events:none;background:rgba(0,0,0,.6);" class="{{ $cover_dimming_class }} hero-overlay"></div>
         <div style="position:relative;z-index:2;">
           {{ partials.Include "site-navigation.html" .}}
           <div class="tc-l pv4 pv6-l ph3 ph4-ns">
